...
                        contentDescription = favoritesBadgeDescription(
                            favoritesBadgeNumber = uiModel.favoritesBadgeNumber,
                            label = favoritesLabel
                        )
                    )
                },
                testTag = "anime_favorites_button"
            )
        }
        Spacer(
            modifier = Modifier
                .fillMaxWidth()
                .background(Black)
...
