...
                onNotificationClick = onNotificationClick,
                onEpisodesViewedMinusClick = onEpisodesViewedMinusClick,
                onEpisodesViewedPlusClick = onEpisodesViewedPlusClick
            )
        },
        modifier = modifier
            .testTag("anime_favorites_item")
            .fillMaxWidth()
            .combinedClickable(onClick = onItemClick, onLongClick = onInfoTypeClick)
            .padding(8.dp)
    )
}

...
